fix: front -> correction overflow du bouton de retour de la page login/post create/register

--- a/front/src/app/pages/login/login.component.scss
+++ b/front/src/app/pages/login/login.component.scss
@@ -8,21 +8,21 @@
     margin: 40px 40px 0 40px
   }
   
-  .back-button-container {
-    padding: 16px 16px 0px 16px;
-    margin-left: 40px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
+.back-button-container {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 16px 16px 0 36px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 
-    .mat-icon {
-      font-size: 48px;
-      width: 48px;
-      height: 48px;
-    }
-      
+  .mat-icon {
+    font-size: 48px;
+    width: 48px;
+    height: 48px;
   }
+    
+}
 
   .login-container {
     align-items: center;
