--- a/front/src/app/pages/post-create/post-create.component.scss
+++ b/front/src/app/pages/post-create/post-create.component.scss
@@ -4,12 +4,12 @@
   flex-direction: column;
   
   .back-button-container {
-    padding: 16px 16px 0px 16px;
-    margin-left: 40px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
+      box-sizing: border-box;
+      width: 100%;
+      padding: 16px 16px 0 36px;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
   
     .mat-icon {
       font-size: 48px;
