--- a/front/src/app/pages/register/register.component.scss
+++ b/front/src/app/pages/register/register.component.scss
@@ -9,12 +9,12 @@
     }
   
     .back-button-container {
-        padding: 16px 16px 0px 16px;
-        margin-left: 40px;
+        box-sizing: border-box;
         width: 100%;
+        padding: 16px 16px 0 36px;
         display: flex;
-        flex-direction: row;
         justify-content: flex-start;
+        align-items: center;
     
         .mat-icon {
           font-size: 48px;
